правка hm-8 от 18.10